// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header renders correctly 1`] = `
<header>
  <div
    className="container navbar"
  >
    <SvgrURL
      className="chilidog"
    />
    <div
      className="homeNavButton homeItem"
    >
      <a
        className="a homeNavButton homeItem"
        href="/"
      >
        Superformula.
      </a>
    </div>
    <nav
      className="navItem container"
    >
      <div
        className="navButton pageItem navItem"
      >
        <a
          className="a navButton pageItem navItem"
          href="/services"
        >
          Services
        </a>
      </div>
      <div
        className="navButton pageItem navItem"
      >
        <a
          className="a navButton pageItem navItem"
          href="/work"
        >
          Work
        </a>
      </div>
      <div
        className="navButton pageItem navItem"
      >
        <a
          className="a navButton pageItem navItem"
          href="/articles"
        >
          Articles
        </a>
      </div>
      <div
        className="navButton pageItem navItem"
      >
        <a
          className="a navButton pageItem navItem"
          href="/contact"
        >
          Contact
        </a>
      </div>
      <div
        className="careersNavButton pageItem navItem"
      >
        <a
          className="a careersNavButton pageItem navItem"
          href="https://careers.superformula.com"
        >
          Careers
        </a>
      </div>
    </nav>
  </div>
</header>
`;

exports[`HomeNavButton renders correctly 1`] = `
<div
  className="homeNavButton undefined"
>
  <a
    className="a homeNavButton undefined"
    href="test"
  >
    test url
  </a>
</div>
`;

exports[`NavBar renders correctly 1`] = `
<div
  className="container navbar"
>
  <SvgrURL
    className="chilidog"
  />
  <div
    className="homeNavButton homeItem"
  >
    <a
      className="a homeNavButton homeItem"
      href="/"
    >
      Superformula.
    </a>
  </div>
  <nav
    className="navItem container"
  >
    <div
      className="navButton pageItem navItem"
    >
      <a
        className="a navButton pageItem navItem"
        href="/services"
      >
        Services
      </a>
    </div>
    <div
      className="navButton pageItem navItem"
    >
      <a
        className="a navButton pageItem navItem"
        href="/work"
      >
        Work
      </a>
    </div>
    <div
      className="navButton pageItem navItem"
    >
      <a
        className="a navButton pageItem navItem"
        href="/articles"
      >
        Articles
      </a>
    </div>
    <div
      className="navButton pageItem navItem"
    >
      <a
        className="a navButton pageItem navItem"
        href="/contact"
      >
        Contact
      </a>
    </div>
    <div
      className="careersNavButton pageItem navItem"
    >
      <a
        className="a careersNavButton pageItem navItem"
        href="https://careers.superformula.com"
      >
        Careers
      </a>
    </div>
  </nav>
</div>
`;
